--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -60,7 +60,8 @@
           {{ _('If you want to submit your proposal, fill out our CfP form and follow the instructions in it. ') }}
         </p>
         <p class="text-justify">
-          <b>{{ _('The deadline for submitting proposals is 01.01.2024') }}</b>
+          <strike>{{ _('The deadline for submitting proposals is 01.01.2024') }}.</strike><br>
+          <b>{{ _('The deadline for submitting proposals is 20.01.2024') }}.</b>
         </p>
 
         <div class="sponsor-details mt-4">
