Added new partners and financial aid form

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -80,12 +80,19 @@
     <div class="row featurette">
       <div class="col-8">
         <h3 class="title-bold size-md margin-b-10">{{ _('Community & Inclusion') }}</h3>
-        <p>{{ _('PyCon is a special type of conference - it is organised by the community for the community') }}
-          <span class="oi oi-heart"></span></p>
-        <p class="lead">{{ _('By attending, you have a chance to meet like minded people and hear a lot of interesting
-          stories. However, for those who cannot afford to attend because of financial reasons we have opened a
-          financial aid scheme and give free tickets.') }}
+        <p class="">
+          {{ _('PyCon is a special type of conference - it is organised by the community for the community') }}.
+        </p>
+        <p class="">
+          {{ _('We are trying to make PyCon SK accessible even to those who have limited financial resources.
+          If you cannot afford to buy a ticket to the conference or pay for travel or accommodation, ask for
+          financial assistance through the form. Tell us more about your motivation to attend PyCon SK and we\'ll
+          inform you about the approval of the financial aid in advance.') }}
+        </p>
         <p>
+          <a href="https://forms.gle/jPe45mEM2CvCfGdd9" target="_blank">{{ _('Financial Aid Form') }}</a>
+        </p>
+
       </div>
       <div class="col-4">
         <img alt=""
@@ -201,7 +208,7 @@
       <div class="col-8">
         <h3 class="title-bold size-md margin-b-10">{{ _('Beginner\'s track') }}</h3>
         <p>{{ _("""PyCon is not just for experienced programmers, our aim is to spread knowledge, promote the Python programming language and create a diverse, supportive community where all members can learn from each other and develop together.""") }}</p>
-        <p class="lead">{{ _("""That's why we offer those interested in programming who have no previous experience the opportunity to attend lectures and workshops where they learn the basics of Python.""") }}</p>
+        <p class="lead">{{ _("""That's why we offer those interested in programming who have little experience the opportunity to attend lectures and workshops where they learn the basics of Python.""") }}</p>
       </div>
 
     </div>
