--- a/templates/coc.html
+++ b/templates/coc.html
@@ -78,6 +78,152 @@
     </div>
   </div>
 </section>
+<section>
+  <div class="container mb-5">
+    <hr>
+
+    <h2 class="title title-bold color-dark">How we handle CoC incidents</h2>
+
+    <p>
+      <strong>
+        This section summarizes the procedures the PyCon SK staff uses to enforce the Code
+        of Conduct.
+      </strong>
+    </p>
+
+    <p>
+      We will acknowledge all receipts of the reports and evaluate conflicts of interest.
+      All reported incidents will be evaluated and consequences for the reported behavior will
+      be proposed. We plan to follow up with the reported person as well as with the reporter.
+    </p>
+
+    <p><strong>Code of Conduct enforcement team:</strong></p>
+    <ul>
+      <li>- Veronika Antalová, veronika.antalova@pycon.sk</li>
+      <li>- Ján Gondoľ, jan.gondol@pycon.sk</li>
+    </ul>
+
+    <p class="mt-4">
+      <strong>
+        Conflicts of interests include:
+      </strong>
+    </p>
+
+    <ul>
+      <li>- The reporter or reported person is your manager</li>
+      <li>
+        - You have a romantic or platonic relationship with either the
+        reporter or the reported person. It’s fine to participate if they are an acquaintance.
+      </li>
+      <li>- The reporter or reported person is your family member</li>
+      <li>- The reporter or reported person is your direct client</li>
+      <li>
+        - The reporter or reported person is someone you work closely with.
+        This could be someone on your team or someone who works on the same project as you.
+      </li>
+      <li>
+        - The reporter or reported person is a maintainer who regularly reviews your contributions
+      </li>
+    </ul>
+
+    <p class="mt-3">
+    Committee members do not need to state why they have a conflict of interest, only that one exists. Other work group members should not ask why the person has a conflict of interest.
+    </p>
+
+    <p>
+    Anyone who has a conflict of interest will remove themselves from the discussion of the incident, and recuse themselves from voting on a response to the report.
+    </p>
+
+    <p>
+    If the incident occurred outside the community, but a community member’s mental health or physical safety may be negatively impacted if no action is taken, the incident may be in scope. Private conversations in community spaces are also in scope.
+    </p>
+
+    <p>
+    Reports which involve higher risk or higher impact may face more severe consequences than reports which involve lower risk or lower impact.
+    </p>
+
+    <p>
+    The event staff will determine a concrete behavioral modification plan that ensures the inappropriate behavior is not repeated. The event staff will also discuss what actions may need to be taken if the reported person does not agree to the behavioral modification plan.
+    </p>
+
+    <p>
+    What follows are examples of possible behavioral modification plans for incidents that occur in online spaces under the scope of this Code of Conduct. This behavioral modification list is not inclusive, and the event staff reserves the right to take any action it deems necessary.
+    </p>
+
+    <ul>
+      <li>- Requiring that the reported person not use specific language</li>
+      <li>- Requiring that the reported person not join in on specific types of discussions</li>
+      <li>- Requiring that the reported person not send private messages to a community member</li>
+      <li>- Requiring that the reported person not join specific communication channels</li>
+      <li>
+        - Removing the reported person from administrator or moderator rights to
+        community infrastructure
+      </li>
+      <li>- Removing a volunteer from their duties and responsibilities</li>
+      <li>- Removing a person from leadership of relevant organizations</li>
+      <li>- Removing a person from membership of relevant organizations</li>
+    </ul>
+
+    <p class="mt-4">
+      <strong>Propose consequences</strong>
+    </p>
+
+    <p>
+      Possible private responses to an incident include:
+    </p>
+
+    <ul>
+      <li>- Nothing, if the behavior was determined to not be a Code of Conduct violation</li>
+      <li>- A verbal or emailed warning</li>
+      <li>- A final warning</li>
+      <li>- Temporarily removing the reported person from the online community</li>
+      <li>- Permanently removing the reported person from the online community</li>
+      <li>- Publishing an account of the incident</li>
+    </ul>
+
+    <p class="mt-4">
+      <strong>Follow up with the reported person</strong>
+    </p>
+
+    <p>
+      The event staff will work with online community administrators/moderators to draft a response to the reported person.
+    </p>
+
+    <p>
+      The work group should not state who reported this incident. They should attempt to anonymize any identifying information from the report. The reported person should be discouraged from contacting the reporter to discuss the report. If they wish to apologize to the reporter, the work group can accept the apology on behalf of the reporter.
+    </p>
+
+    <p>
+      If the reported person provides additional context, the event staff may need to re-evaluate the behavioral modification plan and consequences.
+    </p>
+
+    <p class="mt-4">
+      <strong>Follow up with the reporter</strong>
+    </p>
+
+    <p>
+      A person who makes a report should receive a follow up email stating what action was
+      taken in response to the report. If the work group decided no response was needed,
+      they should provide an email explaining why it was not a Code of Conduct violation.
+    </p>
+    <p>
+      The follow up email should be sent no later than one week after the receipt of the report.
+      If deliberation or follow up with the reported person takes longer than one week, the
+      work group should send a status email to the reporter.
+    </p>
+    <p class="mt-4">
+      <strong>Attribution</strong>
+    </p>
+    <ul>
+      <li>
+        - The <strong><a href="https://us.pycon.org/2023/about/code-of-conduct/index.html">PyCon Code of Conduct</a></strong> is licensed under a <strong><a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></strong>.
+      </li>
+      <li>- Ada Initiative’s guide titled “<strong><a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Responding_to_reports">Conference anti-harassment/Responding to Reports</a></strong>” is licensed under a <strong><a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></strong></li>
+      <li>- Audrey Eschright of <strong><a href="http://safetyfirstpdx.org/">Safety First PDX</a></strong> provided the impact vs risk assessment framework, which is licensed under a <strong><a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution Share-Alike 3.0 Unported License</a></strong> by Audrey Eschright of <strong><a href="http://safetyfirstpdx.org/">Safety First PDX</a></strong></li>
+      <li>- <strong><a href="https://github.com/sagesharp/code-of-conduct-template/">Code of Conduct template</a></strong> was created by <strong><a href="https://otter.technology/code-of-conduct-training">Otter Tech</a></strong> and is licensed under a <strong><a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></strong></li>
+    </ul>
+  </div>
+</section>
 <!-- Content Page Area End Here -->
 {% endblock %}
 
