Refactor code to enable adding sponsors via json

--- a/templates/includes/sponsors_list.html
+++ b/templates/includes/sponsors_list.html
@@ -8,225 +8,19 @@
             <p>{{_('Check who made this event possible!')}}</p>
         </div>
 
-
-<!--          <div class="title-black color-dark text-center">-->
-<!--              <div class="sponsor-details">-->
-
         <div class="sponsonrs-layout1">
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Platinum sponsors')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details platinum mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.titans.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/titans.png') }}" alt="Titans logo"/>
+          {% for category in ['Platinum sponsors', 'Silver sponsors', 'Bronze sponsors', 'Django Girls & PyLadies Sponsor', 'Media partners', 'Partners'] %}
+          <h3 class="color-dark title-black text-center sponsors-title">{{_(category)}}</h3>
+          <div class="row sponsor-row justify-content-center">{% for sponsor in sponsors[category] %}
+              <div class="{% if category not in ['Platinum sponsors', 'Silver sponsors'] %}col-xl-3 {% endif %}{% if category != 'Platinum sponsors' %}col-lg-4 {% endif %}col-md-6 col-sm-6 col-xs-12 align-self-center">
+                  <div class="sponsonrs-box sponsor-details {{ sponsor['class'] }} mx-auto mt-5 mr-1 ml-1 mb-1">
+                      <a href="{{ sponsor['link'] }}" target="_blank">
+                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename=sponsor['logo']) }}" alt="{{ sponsor['alt'] }}"/>
                       </a>
                   </div>
-              </div>
+              </div>{% endfor %}
           </div>
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Silver sponsors')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details gold mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.zurich.com/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/zurich.png') }}" alt="Zurich logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details gold mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.iblsoft.com/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/ibl.png') }}" alt="IBL logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Bronze sponsors')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details silver mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.slido.com/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/slido.png') }}" alt="Slido logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details bronze mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.oreilly.com/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/oreilly.png') }}" alt="O'Reilly logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details bronze mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.almacareer.com/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/alma.png') }}" alt="O'Alma Career logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details bronze mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.stickermule.com/eu/custom-stickers" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/stickermule.png') }}" alt="Stickermule logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          {#
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Community partners')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details silver mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.europython-society.org/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/eps.png') }}" alt="Europython Society logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details silver mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.python.org/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/psf.png') }}" alt="Python Software Foundation logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details silver mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://enter.study/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/enter.svg') }}" alt="ENTER logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          <div class="sponsonrs-layout1">
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Main media partner')}}</h3>
-          <div class="row sponsor-row">
-              <div class="col-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details bronze mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://zive.aktuality.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/zive.png') }}" alt="zive.sk logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-          </div>
-
-          #}
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Django Girls & PyLadies Sponsor')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.nadaciapontis.sk/projekty/accenture-nadacny-fond/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/accenture.png') }}" alt="Accenture.it logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Media partners')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://zive.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/zive.png') }}" alt="Robime.it logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details bronze mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.nextech.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/nextech.png') }}" alt="Nextech logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://robime.it/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/robime-it.svg') }}" alt="Robime.it logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          <h3 class="color-dark title-black text-center sponsors-title">{{_('Partners')}}</h3>
-          <div class="row sponsor-row justify-content-center">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.fiit.stuba.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/fiit.svg') }}" alt="FIIT logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-detail partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.btsgroup.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/bts-group.png') }}" alt="BTS group logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://bratislava.coderdojo.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/coderdojo.svg') }}" alt="Coder Dojo logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://lab.cafe/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/labcafe.png') }}" alt="Lab.cafe logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://ajtyvit.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/ajtyvit.svg') }}" alt="AjTyvIT logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="http://www.freefood.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/freefood.png') }}" alt="FREEFOOD logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://dsacademy.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/dsa.svg') }}" alt="DSA logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.meetup.com/pyladies-bratislava/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/pyladies.jpeg') }}" alt="PyLadies logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="https://www.kosiceitvalley.sk/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/it-valley.png') }}" alt="IT Valley logo"/>
-                      </a>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12 align-self-center">
-                  <div class="sponsonrs-box sponsor-details partners mx-auto mt-5 mr-1 ml-1 mb-1">
-                      <a href="http://www.pycon.lt/" target="_blank">
-                          <img class="img-responsive img-fluid" src="{{ url_for('static', filename='img/partners/pycon_lt.png') }}" alt="PyCon LT logo"/>
-                      </a>
-                  </div>
-              </div>
-          </div>
-
-          </div>
+          {% endfor %}
         </div>
     </div>
 </section>
