Updated speakers and added a sponsor

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,11 +124,11 @@
                     </div>
                     <div class="row">
                         {% for item in news %}
-                        <div class="col-12">
+                        <div class="col-12 mb-5">
                             <div class="blog-layout2">
                                 <div class="media align-items-center media-none--sm">
                                     <div class="item-img">
-                                        <img src="img/blog/blog4.jpg" alt="blog" class="img-fluid">
+<!--                                        <img src="img/blog/blog4.jpg" alt="blog" class="img-fluid">-->
                                         <div class="item-date">
                                             {{ item.date.strftime('%d') }}
                                             <span> {{ item.date.strftime('%b') }}</span>
